Pagina en proceso con estilos css

--- a/about.html
+++ b/about.html
@@ -19,6 +19,8 @@
     </nav>
 </header>
 
+<main>
+
   <h1>Historia de Copacabana</h1>
 
   <p>La historia de Copacabana se remonta a siglos atrás, cuando era un pequeño pueblo de pescadores llamado Saco dos Alferes. En el siglo XIX, la zona comenzó a desarrollarse como un destino turístico, y en 1914 se construyó el Fuerte de Copacabana, un monumento histórico que se convirtió en un símbolo de la ciudad.</p>
@@ -46,6 +48,7 @@
   <p>La zona de Copacabana también es un importante centro comercial y cultural. La avenida Atlântica está llena de tiendas, restaurantes y bares. La zona también alberga varios museos, galerías de arte y teatros.</p>
 
   <p>Copacabana es un lugar vibrante y cosmopolita que ofrece algo para todos. Es un destino turístico popular para personas de todo el mundo, y es un lugar que vale la pena visitar.</p>
+</main>
 
 </body>
 </html>
