--- a/visit_activities.html
+++ b/visit_activities.html
@@ -1,50 +1,63 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visits and Activities</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="acommodation.html">Accommodation</a></li>
-        <li><a href="visit_activities.html">Visits Activities</a></li>
-        <li><a href="entertainment.html">Entretenimiento</a></li>
-        <li><a href="form.html">Contactanos</a></li>
-      </ul>
-    <h1>Visits and Activities</h1>
-    <h2>Aquí tienes algunas actividades que puedes hacer en Copacabana: <br><br></h2>
 
-<ol>
-    <li>Relájate en la playa y disfruta del sol y la arena.</li>
-        <ul>
-            <li>Playa de Ipanema</li>
-            <li>Playa de Copacabana</li>
-            <li>Playa de leblon</li>
-        </ul>              
-    <li>Practica deportes acuáticos.</li>
-        <ul>
-            <li>Surf,</li>
-            <li>Natación</li>
-            <li>Windsurf</li>            
-        </ul>        
-    
-    <li>Visita el Fuerte de Copacabana, un monumento histórico que ofrece unas vistas impresionantes de la ciudad.</li>
-    <li>Disfruta de la gastronomía local en uno de los muchos restaurantes de Copacabana.</li>
-    <li>Participa en una de las muchas fiestas o eventos que tienen lugar en Copacabana.</li>
-        <ul>
-            <li>Carnaval de Rio</li>
-            <li>Rock in Rio</li>
-            <li>Año nuevo</li>
-        </ul>        
-    <li>Déjate llevar por el ritmo de la samba en uno de los muchos bares o clubes de Copacabana.</li>
-    <li>Haz un recorrido en barco por la bahía de Guanabara y admira las vistas de la ciudad desde el mar.</li>
-    <li>Visita el Parque Nacional de Tijuca, una selva tropical que se encuentra a pocos kilómetros de Copacabana.</li>
-</ol>         
-    
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="acommodation.html">Accommodation</a></li>
+                <li><a href="visit_activities.html">Visits Activities</a></li>
+                <li><a href="entertainment.html">Entretenimiento</a></li>
+                <li><a href="form.html">Contactanos</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="visit_activities">
+        <h1>Visits and Activities</h1>
+        <h2>Aquí tienes algunas actividades que puedes hacer en Copacabana: <br><br></h2>
+
+        <ol>
+            <li>Relájate en la playa y disfruta del sol y la arena.</li>
+            <ul>
+                <li>Playa de Ipanema</li>
+                <li>Playa de Copacabana</li>
+                <li>Playa de leblon</li>
+            </ul>
+            <li>Practica deportes acuáticos.</li>
+            <ul>
+                <li>Surf,</li>
+                <li>Natación</li>
+                <li>Windsurf</li>
+            </ul>
+
+            <li>Visita el Fuerte de Copacabana, un monumento histórico que ofrece unas vistas impresionantes de la
+                ciudad.</li>
+            <li>Disfruta de la gastronomía local en uno de los muchos restaurantes de Copacabana.</li>
+            <li>Participa en una de las muchas fiestas o eventos que tienen lugar en Copacabana.</li>
+            <ul>
+                <li>Carnaval de Rio</li>
+                <li>Rock in Rio</li>
+                <li>Año nuevo</li>
+            </ul>
+            <li>Déjate llevar por el ritmo de la samba en uno de los muchos bares o clubes de Copacabana.</li>
+            <li>Haz un recorrido en barco por la bahía de Guanabara y admira las vistas de la ciudad desde el mar.</li>
+            <li>Visita el Parque Nacional de Tijuca, una selva tropical que se encuentra a pocos kilómetros de
+                Copacabana.</li>
+        </ol>
+
+    </main>
+
+
 </body>
-</html>   
+
+</html>
