nuevo update html css

--- a/acommodation.html
+++ b/acommodation.html
@@ -33,7 +33,7 @@
                 <tr>
                     <td><a href="https://www.airbnb.com.co/s/Copacabana--Río-de-Janeiro-~-Rio-de-Janeiro/homes?adults=2&place_id=ChIJg2y_JxbVmwARsJx3UxjUaZU">Copacabana</a></td>
                     <td><iframe src="https://www.google.com/maps/d/u/1/embed?mid=1r3VL3R6juxk3Bn2Mvn-yyhQZpycbKNA&ehbc=2E312F" ></iframe></td>
-                    <td><div><img src="images/playacopacabana.webp   " alt="Playa de cobacabana en verano" title="Playa de Copacabana en Rio" ></div></td>
+                    <td><img src="images/playacopacabana.webp   " alt="Playa de cobacabana en verano" title="Playa de Copacabana en Rio" ></td>
                 </tr>
                 <tr>
                     <td><a href="https://www.airbnb.com.co/s/Copacabana--Río-de-Janeiro-~-Rio-de-Janeiro/homes?adults=2&tab_id=home_tab&refinement_paths%5B%5D=%2Fhomes&query=Ipanema%2C%20Río%20de%20Janeiro%20-%20Rio%20de%20Janeiro&flexible_trip_lengths%5B%5D=one_week&monthly_start_date=2023-10-01&monthly_length=3&price_filter_input_type=0&price_filter_num_nights=5&channel=EXPLORE&date_picker_type=calendar&source=structured_search_input_header&search_type=filter_change">Ipanema</a></td>
