--- a/form.html
+++ b/form.html
@@ -7,15 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="acommodation.html">Accommodation</a></li>
-        <li><a href="visit_activities.html">Visits Activities</a></li>
-        <li><a href="entertainment.html">Entretenimiento</a></li>
-        <li><a href="form.html">Contactanos</a></li>
-    </ul>
-    <form action="" method="post" action=""mailto:alejandrocardona710@gmail.com></form>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="acommodation.html">Accommodation</a></li>
+                <li><a href="visit_activities.html">Visits Activities</a></li>
+                <li><a href="entertainment.html">Entretenimiento</a></li>
+                <li><a href="form.html">Contactanos</a></li>
+              </ul>  
+        </nav>
+    </header>
+    <div class="form">
+        <form action="" method="post" action=""mailto:alejandrocardona710@gmail.com></form>
         <label for="Name">Nombre</label>
         <input type="text" name="Name" id="Name" required>
         <br>
@@ -27,6 +32,7 @@
         <textarea name="Mensaje" id="Mensaje" cols="30" rows="10" required></textarea>
         <br>
         <button type="submit" value="submit">Enviar</button>
-    <form action="" method="post" action=""></form>
+    <form action="" method="post" action=""></form></div>
+    
 </body>
 </html>
