nuevo update html css

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
             <strong>Copacabana es más que una playa.</strong> Es una ciudad vibrante y llena de vida, con una amplia gama de actividades para todos los gustos. <br><br>
            
         </p>
-        <img src="images/playacopacabana.webp" alt="Playa de cobacabana en verano" title="Playa de Copacabana en Rio">
-        <a href="about.html">Conoce mas</a>
+        <div class="images_index">
+            <img src="images/playacopacabana.webp" alt="Playa de cobacabana en verano" title="Playa de Copacabana en Rio">
+            <img src="https://images.adsttc.com/media/images/6449/6c61/2def/3401/7a85/1139/newsletter/a-historia-do-calcadao-de-copacabana_3.jpg?1682533486" alt="Losas y palmas en la playa">
+        </div>        
+        <a href="about.html" style="color: blue;">Conoce mas</a>
     </main>
 
     
